# agv-bot-project

./: .gitignore  README.md
artifacts/graphs/: frames_2026-03-17_22.16.20.gv
docs/calibration/: hoverboard_wheel_calibration_with_odrive.md
docs/plans/: robot_plan.docx
prompts/: odrive_calibration_agent_prompt.md
src/agv_description/: CMakeLists.txt  package.xml
src/agv_description/launch/: display.launch.py  sim.launch.py
src/agv_description/models/agv/: model.config  model.sdf
src/agv_description/params/: agv_bridge.yaml  agv_nav2_params.yaml
src/agv_description/rviz/: agv_display.rviz
src/agv_description/urdf/: agv_robot.urdf
src/agv_description/worlds/: agv_room.world
src/agv_test_pkg/: README_dashboard_service.md  package.xml  setup.cfg  setup.py
src/agv_test_pkg/agv_test_pkg/: agv_goal_nav.py  agv_keyboard_teleop.py  agv_listener_node.py  agv_nav_goal_bridge.py  hello_agv_node.py  odrive_dashboard.py  pi_message_listener.py  web_sensor_dashboard.py
src/agv_test_pkg/launch/: real_robot_dashboard.launch.py
src/agv_test_pkg/resource/: agv_test_pkg
src/agv_test_pkg/scripts/: start_web_dashboard.sh
src/agv_test_pkg/systemd/: pi-sensor-dashboard.service
src/agv_test_pkg/templates/: web_sensor_dashboard.html
src/ydlidar_ros2_driver/config/: ydlidar.rviz
src/ydlidar_ros2_driver/launch/: laptop_scan_view.launch.py  ydlidar_launch.py  ydlidar_launch_view.py
src/ydlidar_ros2_driver/params/: X3.yaml
